##############################################################################
## Copyright 2020 Real-Time Innovations, Inc.                               ##
## Author: fabriziobertocci@gmail.com                                       ##
## Subject to Eclipse Public License v1.0; see LICENSE.md for details.      ##
##############################################################################

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
EXTRA_DIST=README.md examples
