##############################################################################
## Copyright (c) 2020 Real-Time Innovations, Inc.  All rights reserved.     ##
##                                                                          ##
## Permission to modify and use for internal purposes granted.              ##
## This software is provided "as is", without warranty, express or implied. ##
##############################################################################

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
EXTRA_DIST=README.md examples
