##############################################################################
## Copyright 2020 Real-Time Innovations, Inc.                               ##
## Author: fabriziobertocci@gmail.com                                       ##
## Subject to Eclipse Public License v1.0; see LICENSE.md for details.      ##
##############################################################################
AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = connext-config

connext_config_SOURCES = connext-config.c
