##############################################################################
## Copyright (c) 2020 Real-Time Innovations, Inc.  All rights reserved.     ##
##                                                                          ##
## Permission to modify and use for internal purposes granted.              ##
## This software is provided "as is", without warranty, express or implied. ##
##############################################################################

AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = connext-config

connext_config_SOURCES = connext-config.c
