#########################################################################
# APPLICATION SECTION
#########################################################################
AUTOMAKE_OPTIONS = subdir-objects

#bin_PROGRAMS = Hello
noinst_PROGRAMS = Hello

noinst_HEADERS = Hello.h \
		 HelloPublisher.h \
		 HelloSubscriber.h

Hello_SOURCES = Hello.c \
		HelloPublisher.c \
		HelloSubscriber.c

